Migrate to LangChain v1 create_agent API
- Replace deprecated langgraph.prebuilt.create_react_agent with langchain.agents.create_agent
- Update system prompt handling (string instead of RunnableLambda)
- Add langchain>=1.0.0 dependency
- Remove unused imports (SystemMessage, RunnableLambda)
- All async tools working correctly with new API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 dependencies = [
     "nexus-fs-python[langgraph]>=0.1.0",
     "langgraph>=0.2.0",
+    "langchain>=1.0.0",
     "langchain-core>=0.3.0",
     "langchain-anthropic>=0.2.0",
     "langchain-openai>=0.2.0",
