--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ classifiers = [
 dependencies = [
     "nexus-fs-python[langgraph]>=0.1.0",
     "langgraph>=0.2.0",
+    "langgraph-cli>=0.3.6",
+    "langgraph-api>=0.2.130",
+    "langgraph-checkpoint-sqlite>=2.0.0",
+    "langgraph-checkpoint>=3.0.1",
     "langchain>=1.0.0",
     "langchain-core>=0.3.0",
     "langchain-anthropic>=0.2.0",
