--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "langchain-core>=0.3.0",
     "langchain-anthropic>=0.2.0",
     "langchain-openai>=0.2.0",
+    "langchain-google-genai>=2.0.0",
     # Optional dependencies (can be installed separately if needed)
     "e2b-code-interpreter>=1.0.0",  # For sandbox tools
     "tavily-python>=0.3.0",         # For web search
